...
        android:orientation="horizontal"
        android:id="@+id/date_picker"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <ImageButton
            android:id="@+id/previous_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/last_date_arrow"
            android:src="@drawable/ic_left"
            android:background="@null"
            android:gravity="start"
...
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/next_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_date_arrow"
            android:src="@drawable/ic_right"
            android:background="@null"
            android:gravity="end"
...
