...
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.csbgroup.myphr.Calendar.CalendarMonth">

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarView"
            app:mcv_tileWidth="55dp"
            app:mcv_tileHeight="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
...
            android:text="@string/next_appointment"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/upcoming_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_below="@id/upcoming_app"
            android:background="@color/colorAccent"
            android:layout_margin="10dp"
...
